--- a/home/home.html
+++ b/home/home.html
@@ -6,6 +6,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="homecss.css">
       <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+      <!--script for font ganna one fonawsome.com eken-->
+      <script src="https://kit.fontawesome.com/0224d319d2.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <nav>
@@ -27,8 +30,16 @@
     </nav>
 
     <section>
-      
+         <!-- search bar-->
+    <div class="search-box">
+      <input class="search-txt" type="text" name="" placeholder="Type to explore">
+      <a class="search-btn" href="#">
+        <i class="fas fa-search"></i>
+      </a>
+    </div>
     </section>
+
+   
 
   </body>
 </html>
