--- a/home/home.html
+++ b/home/home.html
@@ -30,12 +30,17 @@
     </nav>
 
     <section>
-         <!-- search bar-->
-    <div class="search-box">
-      <input class="search-txt" type="text" name="" placeholder="Type to explore">
-      <a class="search-btn" href="#">
-        <i class="fas fa-search"></i>
-      </a>
+      <div>
+            <div>
+                <h1 id="doYouKnow">Do you know where to go?</h1>
+            </div>
+                <!-- search bar-->
+            <div class="search-box">
+                  <input class="search-txt" type="text" name="" placeholder="Type to explore">
+                <a class="search-btn" href="#">
+                    <i class="fas fa-search"></i>
+                </a>
+            </div>
     </div>
     </section>
 
