--- a/home/home.html
+++ b/home/home.html
@@ -31,8 +31,9 @@
 
     <section>
       <div>
-            <div>
-                <h1 id="doYouKnow">Do you know where to go?</h1>
+            <div class="topics">
+                <h1 class="mainTopic">Whats your wish?</h1>
+                <h2 class="subtitle">Let's explore</h2>
             </div>
                 <!-- search bar-->
             <div class="search-box">
