--- a/home/home.html
+++ b/home/home.html
@@ -8,6 +8,10 @@
       <script src="https://kit.fontawesome.com/a076d05399.js"></script>
       <!--script for font ganna one fonawsome.com eken-->
       <script src="https://kit.fontawesome.com/0224d319d2.js" crossorigin="anonymous"></script>
+      <head>
+        <script src="jquery-3.5.1.min.js"></script>
+        </head>
+        
 
   </head>
   <body>
@@ -42,7 +46,7 @@
                     <i class="fas fa-search"></i>
                 </a>
             </div>
-    </div>
+      </div>
     </section>
 
    
