--- a/sign in/css3.html
+++ b/sign in/css3.html
@@ -15,7 +15,7 @@
 			<input type="password" name="" placeholder="enter password">
 			<input type="submit" name="" value="login">
 			<a href="#">lost your password?</a><br>
-			<a href="#">dont have an account?</a><
+			<a href="#">dont have an account?</a>
 		</form>
 	</div>
 </body>
