--- a/sign in/css3.html
+++ b/sign in/css3.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 	<div class="loginbox">
-	<img src="travel.jpg" class="travel">
-		<h1>sign in here</h1>
+	<img src="logo.png" class="logo">
+		<h1>Sign in Here</h1>
 		<form>
-			<p>user name</p>
-			<input type="text" name="" placeholder="enter username">
-			<p>password</p>
+			<p>User Name</p>
+			<input type="text" name="" placeholder="Enter Username">
+			<p>Password</p>
 			<input type="password" name="" placeholder="enter password">
 			<input type="submit" name="" value="login">
-			<a href="#">lost your password?</a><br>
-			<a href="#">dont have an account?</a>
+			<a href="#">Lost your password?</a><br>
+			<a href="#">Don't have an account?</a>
 		</form>
 	</div>
 </body>
