Add background slide

--- a/home/home.html
+++ b/home/home.html
@@ -35,6 +35,15 @@
 
     <section>
       <div>
+
+        <slider>    <!--you can insert text <p>  </p>-->
+          <slide><p></p></slide>
+          <slide><p></p></slide>
+          <slide><p></p></slide>
+          <slide><p></p></slide>
+        </slider>
+    
+
             <div class="topics">
                 <h1 class="mainTopic">Whats your wish?</h1>
                 <h2 class="subtitle">Let's explore</h2>
