--- a/home/home.html
+++ b/home/home.html
@@ -27,7 +27,7 @@
       <ul>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">My Trips</a></li>
-        <li><a href="#">Attactrion</a></li>
+        <li><a href="Explore/test 1.html">Attactrion</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
