Revert "Merge branch 'main' of https://github.com/prineth/CA-web-development-project into main"
This reverts commit 153361ccbd70c12f118d3e86e144dd70261e5a74, reversing
changes made to 0d36ef1f41b49570aaf180091ed47419eb91ae73.

--- a/home/home.html
+++ b/home/home.html
@@ -27,7 +27,7 @@
       <ul>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">My Trips</a></li>
-        <li><a href="Explore/test 1.html">Attactrion</a></li>
+        <li><a href="#">Attactrion</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -35,15 +35,6 @@
 
     <section>
       <div>
-
-        <slider>    <!--you can insert text <p>  </p>-->
-          <slide><p></p></slide>
-          <slide><p></p></slide>
-          <slide><p></p></slide>
-          <slide><p></p></slide>
-        </slider>
-    
-
             <div class="topics">
                 <h1 class="mainTopic">Whats your wish?</h1>
                 <h2 class="subtitle">Let's explore</h2>
@@ -58,9 +49,7 @@
       </div>
     </section>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   
 
   </body>
 </html>
