--- a/sign in/css3.html
+++ b/sign in/css3.html
@@ -12,7 +12,7 @@
 			<p>User Name</p>
 			<input type="text" name="" placeholder="Enter Username">
 			<p>Password</p>
-			<input type="password" name="" placeholder="enter password">
+			<input type="password" name="" placeholder="Enter P assword">
 			<input type="submit" name="" value="login">
 			<a href="#">Lost your password?</a><br>
 			<a href="#">Don't have an account?</a>
