update slides and descriptions

--- a/Sigiriya/places_template.html
+++ b/Sigiriya/places_template.html
@@ -17,35 +17,35 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
       <img class="pic" src="images/z.jpg">
-      <div class="text">Herd of deers</div>
+      <div class="text">Wallarts</div>
     </div>
 
 	<!--2nd Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
       <img class="pic" src="images/x.jpg">
-      <div class="text">Elephant</div>
+      <div class="text">Sigiriya Rock</div>
     </div>
 
     <!--3rd Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
-      <img class="pic" src="images/x.jpg">
-      <div class="text">Elephant</div>
+      <img class="pic" src="images/y.jpg">
+      <div class="text">Sinhapadaya</div>
     </div
 
     <!--4th Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
       <img class="pic" src="images/w.jpg">
-      <div class="text">Elephant</div>
+      <div class="text">Sigiriya</div>
     </div>
 
     <!--5th Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
       <img class="pic" src="images/s.jpg">
-      <div class="text">Stork</div>
+      <div class="text">Top View</div>
     </div>
 
     <!--Arrows----------------------------------------------------------------->
