--- a/home/home.html
+++ b/home/home.html
@@ -28,8 +28,20 @@
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">My Trips</a></li>
         <li><a href="Explore/test 1.html">Attactrion</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
+        
+        <div class="dropdown">
+          <!--<a class="dropbtn">Dropdown</a>--> 
+          <li><a class="dropbtn" href="#">About us</a></li>
+          <div class="dropdown-content">
+            <a href="#">Contact</a>
+            <a href="#">About us</a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        <li><a id="active_login" class="login_hover" href="#">Log in</a></li>
+        <li><a id="active_signup" class="signup_hover" href="#">Sign up</a></li>
+
       </ul>
     </nav>
 
