--- a/home/sign in/signin.html
+++ b/home/sign in/signin.html
@@ -129,7 +129,7 @@ span.psw {
 
 <h2>Modal Login Form</h2>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+<a onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</a>
 
 <div id="id01" class="modal">
   
