--- a/home/home.html
+++ b/home/home.html
@@ -179,18 +179,19 @@
           <slide><p></p></slide>
         </slider>
     
-
+            <!--
             <div class="topics">
                 <h1 class="mainTopic">Whats your wish?</h1>
                 <h2 class="subtitle">Let's explore</h2>
             </div>
-                <!-- search bar-->
+                -- search bar--
             <div class="search-box">
                   <input class="search-txt" type="text" name="" placeholder="Type to explore">
                 <a class="search-btn" href="#">
                     <i class="fas fa-search"></i>
                 </a>
             </div>
+          -->
       </div>
     </section>
 
