update heading in cards
update heading in cards

--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -9,7 +9,7 @@
             <div class="card-image"></div>
             <div class="card-text">
                 <span class="date">4 days ago</span>
-                <h2>Post one</h2>
+                <h2>Beach</h2>
                 <p>Hike</p>
             </div>
             <div class="card-stats">
@@ -31,7 +31,7 @@
             <div class="card-image"></div>
             <div class="card-text">
                 <span class="date">4 days ago</span>
-                <h2>Post one</h2>
+                <h2>Off Road And Safari</h2>
                 <p>Hike</p>
             </div>
             <div class="card-stats">
@@ -53,7 +53,7 @@
             <div class="card-image"></div>
             <div class="card-text">
                 <span class="date">4 days ago</span>
-                <h2>Post one</h2>
+                <h2>Rawing And Water Rafting</h2>
                 <p>Hike</p>
             </div>
             <div class="card-stats">
@@ -75,7 +75,7 @@
             <div class="card-image"></div>
             <div class="card-text">
                 <span class="date">4 days ago</span>
-                <h2>Post one</h2>
+                <h2>Rocks And Hike</h2>
                 <p>Hike</p>
             </div>
             <div class="card-stats">
@@ -97,7 +97,7 @@
             <div class="card-image"></div>
             <div class="card-text">
                 <span class="date">4 days ago</span>
-                <h2>Post one</h2>
+                <h2>Ancient Cities</h2>
                 <p>Hike</p>
             </div>
             <div class="card-stats">
