--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -8,9 +8,9 @@
         <div class="card">
             <div class="card-image"></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"></span>
                 <h2>Beach</h2>
-                <p>Hike</p>
+                <p>Sri Lanka, officially the Democratic Socialist Republic of Sri Lanka, is an island country in South Asia, located in the Indian Ocean southwest of the Bay of Bengal and southeast of the Arabian Sea</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
@@ -30,9 +30,9 @@
         <div class="card">
             <div class="card-image"></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"></span>
                 <h2>Off Road And Safari</h2>
-                <p>Hike</p>
+                <p>Off-roading is the activity of driving or riding a vehicle on unsurfaced roads or tracks and A safari is an overland journey, usually a trip by tourists in Srilanka.</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
@@ -52,9 +52,9 @@
         <div class="card">
             <div class="card-image"></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"></span>
                 <h2>Rawing And Water Rafting</h2>
-                <p>Hike</p>
+                <p>Rafting and white water rafting are recreational outdoor activities which use an inflatable raft to navigate a river or other body of water.</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
@@ -74,9 +74,9 @@
         <div class="card">
             <div class="card-image"></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"></span>
                 <h2>Rocks And Hike</h2>
-                <p>Hike</p>
+                <p>Hiking is a long, vigorous walk, usually on trails or footpaths in the countryside.</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
@@ -96,9 +96,9 @@
         <div class="card">
             <div class="card-image"></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"></span>
                 <h2>Ancient Cities</h2>
-                <p>Hike</p>
+                <p>Anuradhapura is one of the ancient cities in Sri Lanka, well known for its ruins depicting early Sri Lankan civilization. It is very famous among Buddhists pilgrims.</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
