--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image1"></div>
             <div class="card-text">
                 <span class="date"></span>
                 <h2>Beach</h2>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image2"></div>
             <div class="card-text">
                 <span class="date"></span>
                 <h2>Off Road And Safari</h2>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image3"></div>
             <div class="card-text">
                 <span class="date"></span>
                 <h2>Rawing And Water Rafting</h2>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image4"></div>
             <div class="card-text">
                 <span class="date"></span>
                 <h2>Rocks And Hike</h2>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image5"></div>
             <div class="card-text">
                 <span class="date"></span>
                 <h2>Ancient Cities</h2>
