--- a/home/home.html
+++ b/home/home.html
@@ -162,7 +162,7 @@
         </div>
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         <li><a onclick="document.getElementById('id01').style.display='block'" style="width:auto;" class="login_hover" id="active_login">Login</a></li>
-        <li><a id="active_signup" class="signup_hover" href="#">Sign up</a></li>
+        <li><a id="active_signup" class="signup_hover" href="signup(hela)/text.html">Sign up</a></li>
 
         
 
