--- a/home/home.html
+++ b/home/home.html
@@ -155,9 +155,9 @@
           <!--<a class="dropbtn">Dropdown</a>--> 
           <li><a class="dropbtn" href="#">About us</a></li>
           <div class="dropdown-content">
-            <a href="#">Contact</a>
-            <a href="#">About us</a>
-            <a href="#">Privacy Policy</a>
+            <a href="about us/contact.html">Contact</a>
+            <a href="about us/about.html">About us</a>
+            <a href="about us/privacy.html">Privacy Policy</a>
           </div>
         </div>
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
