--- a/parallex effect/index.html
+++ b/parallex effect/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <div class="container">
-                <h3 class="logo">Brand<span>Name</span></h3>
+                <h3 class="logo">Travel<span>Lanka</span></h3>
                 <div class="hamburger-menu">
                     <div class="bar"></div>
                 </div>
             </div>
         </nav>
 
-        <h1 class="big-title translate" data-speed="0.1">Discover.</h1>
+        <h1 class="big-title translate" data-speed="0.1">TravelLanka.</h1>
 
         <!--<img src="img/person.png" class="person translate" data-speed="-0.25" alt=""> -->
         <img src="img/sigiriya/sigiriya.png" class="mountain1 translate" data-speed="-0.2" alt="">
