--- a/parallex effect/index.html
+++ b/parallex effect/index.html
@@ -23,7 +23,7 @@
         <!--<img src="img/person.png" class="person translate" data-speed="-0.25" alt=""> -->
         <img src="img/sigiriya/sigiriya.png" class="mountain1 translate" data-speed="-0.2" alt="">
         <img src="img/sigiriya/sigiriya back.png" class="mountain2 translate" data-speed="0.4" alt="">
-        <img src="img/sigiriya/far mountain.png" class="mountain3 translate" data-speed="0.3" alt="">
+        <img src="img/sigiriya/far mountain copy2.png" class="mountain3 translate" data-speed="0.3" alt="">
         <img src="img/sigiriya/sky.png" class="sky translate" data-speed="0.5" alt="">
     </header>
 
