--- a/parallex effect/index.html
+++ b/parallex effect/index.html
@@ -18,11 +18,11 @@
             </div>
         </nav>
 
-        <h1 class="big-title translate" data-speed="0.1">TravelLanka.</h1>
+        <h1 class="big-title translate" data-speed="0.1">  </h1><!-- TOPIC "travel lanka"-->
 
         <!--<img src="img/person.png" class="person translate" data-speed="-0.25" alt=""> -->
         <img src="img/sigiriya/sigiriya.png" class="mountain1 translate" data-speed="-0.2" alt="">
-        <img src="img/sigiriya/sigiriya back.png" class="mountain2 translate" data-speed="0.4" alt="">
+        <img src="img/sigiriya/sigiriya back2.png" class="mountain2 translate" data-speed="0.4" alt="">
         <img src="img/sigiriya/far mountain copy2.png" class="mountain3 translate" data-speed="0.3" alt="">
         <img src="img/sigiriya/sky.png" class="sky translate" data-speed="0.5" alt="">
     </header>
