--- a/home/about us/contact.html
+++ b/home/about us/contact.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>Contact From Design</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>contact</h1>
+	<div class="Contact-title">
+		<h1>Contact Us</h1>
+		<h2>We are always ready to serve you!</h2>
+	</div>
+
+	<div class="contact-form">
+		<form id="contact-form" method="post" action="contact-form.php">
+		<input type="text" name="name" class="form-control" placeholder="Your Name" required><br>
+		<input type="email" name="email" class="form-control" placeholder="Your Email" required><br> 
+		<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br>
+		<input type="submit" class="form-control submit" value="Submit">
+
+	</form>
+
+
+	</div>
+
 </body>
 </html>
