link beach file

--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="test 1.css">
     </head>
     <body>
+    	<a href="beach/beach.html">
         <div class="card">
             <div class="card-image1"></div>
             <div class="card-text">
@@ -27,6 +28,7 @@
                 </div>
             </div>
         </div>
+    	</a>
         <div class="card">
             <div class="card-image2"></div>
             <div class="card-text">
