--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="test 1.css">
     </head>
     <body>
-    	<a href="beach/beach.html">
+    	<a href="beach/beach.html"></a>
         <div class="card">
             <div class="card-image1"></div>
             <div class="card-text">
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-    	</a>
+    	
         <div class="card">
             <div class="card-image2"></div>
             <div class="card-text">
