--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" type="text/css" href="test 1.css">
     </head>
     <body>
-        <img src="1a15cbf1b61b7a95d8922482ecfeb37d.jpg" alt="srilanka map">
+        <div class="map"></div>
+       
     	<a href="beach/beach.html"></a>
         <div class="card">
             <div class="card-image1"></div>
