--- a/Agent login form/login.html
+++ b/Agent login form/login.html
@@ -5,6 +5,12 @@
         <body>
             <div class="loginbox">
                 <img src="avatar.png" class="avatar">
+                <h1>Login Here</h1>
+                <form>
+                    <p>Username</p>
+                    <input type="text" name="" placeholder="Enter Username">
+                    <p>Password</p>
+                </form>
             </div>
 
         </body>
