--- a/Agent login form/login.html
+++ b/Agent login form/login.html
@@ -10,6 +10,8 @@
                     <p>Username</p>
                     <input type="text" name="" placeholder="Enter Username">
                     <p>Password</p>
+                    <input type="password" name="" placeholder="Enter password">
+                    <input type="submit" name="" value="Login">
                 </form>
             </div>
 
