--- a/Agent login form/login.html
+++ b/Agent login form/login.html
@@ -12,6 +12,8 @@
                     <p>Password</p>
                     <input type="password" name="" placeholder="Enter password">
                     <input type="submit" name="" value="Login">
+                    <a href="#">Lost your password?</a><br>
+                    <a href="#">Don't have an account</a>
                 </form>
             </div>
 
