--- a/Agent login form/login.html
+++ b/Agent login form/login.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="login.css">
         <body>
             <div class="loginbox">
-                <img src="avatar.png" class="avatar">
+                <img src="93_-_User-512.png" class="avatar">
                 <h1>Login Here</h1>
                 <form>
                     <p>Username</p>
