--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -120,6 +120,8 @@
             </div>
         </div>
         	<br><br><br><br><br><br><br>
-         <div class="map"></div>
+         <div class="map">
+          <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="640" height="480"></iframe>
+         </div>
     </body>
 </html>
