--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -120,11 +120,14 @@
             </div>
         </div>
         <br>
-        <br>
 
         	<br><br><br><br><br><br>
          <div class="map">
+         	
+         <script async src="https://cse.google.com/cse.js?cx=5f50e9cb098914d20"></script>
+<div class="gcse-search"></div>
           <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500"></iframe>
          </div>
+
     </body>
 </html>
