--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -123,9 +123,11 @@
 
         	<br><br><br><br><br><br>
          <div class="map">
-         	
-         <script async src="https://cse.google.com/cse.js?cx=5f50e9cb098914d20"></script>
+         
+<div class="sbar">	
+<script async src="https://cse.google.com/cse.js?cx=5f50e9cb098914d20"></script>
 <div class="gcse-search"></div>
+</div>
           <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500"></iframe>
          </div>
 
