--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -10,6 +10,10 @@
                 <div class="col-md-10 offset=md-1">
                     <div class="row">
                         <div class="col-md-5"></div>
+                        <h3>Join Us</h3>
+                        <p></p>
+                    </div>
+                    <div class="col-md-5"></div>
                     </div>
                 </div>
             </div>
