--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -11,7 +11,8 @@
                     <div class="row">
                         <div class="col-md-5"></div>
                         <h3>Join Us</h3>
-                        <p></p>
+                        <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
+                        <button type="button" class="btn btn-primary">About Us</button>
                     </div>
                     <div class="col-md-5"></div>
                     </div>
