--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -9,12 +9,21 @@
             <div class="row">
                 <div class="col-md-10 offset=md-1">
                     <div class="row">
-                        <div class="col-md-5"></div>
-                        <h3>Join Us</h3>
-                        <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
-                        <button type="button" class="btn btn-primary">About Us</button>
-                    </div>
-                    <div class="col-md-5"></div>
+                        <div class="col-md-5 register-left">
+                            <h3>Join Us</h3>
+                            <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
+                            <button type="button" class="btn btn-primary">About Us</button>
+
+
+                        </div>
+
+                        <div class="col-md-7 register-right">
+
+
+                            
+                        </div>
+
+
                     </div>
                 </div>
             </div>
