--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -18,6 +18,38 @@
                         </div>
 
                         <div class="col-md-7 register-right">
+                            <h2>Signup Here</h2>
+                            <div class="register-form">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Full Name">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Username">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Email">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Date of birth">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Address">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="NIC">
+
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Contact Number">
+
+                                </div>
+
+                            </div>
 
 
                             
