--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -33,7 +33,7 @@
 
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Date of birth">
+                                    <input type="date" class="form-control" placeholder="Date of birth">
 
                                 </div>
                                 <div class="form-group">
@@ -45,9 +45,14 @@
 
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" placeholder="Contact Number">
 
                                 </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" placeholder="Password">
+
+                                </div>
+                                <button type="button" class="btn btn-primary">Signup</button>
 
                             </div>
 
