--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -10,6 +10,7 @@
                 <div class="col-md-10 offset=md-1">
                     <div class="row">
                         <div class="col-md-5 register-left">
+                            <img src="16-166376_drop-down-arrow-dropdown-arrow-icon-png.png"
                             <h3>Join Us</h3>
                             <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
                             <button type="button" class="btn btn-primary">About Us</button>
