--- a/home/about us/privacy policy/privacy policy.html
+++ b/home/about us/privacy policy/privacy policy.html
@@ -1,9 +1,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Privacy Policy</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+    <div class="header">
+		<div class="main">
+		<h1>Privacy Policy</h1>
+		<p>
+            TravelSense is concerned about the privacy of the information that you provide during your visits toour website. To provide you with certain services, enhance your visit to our website, or to allow us to follow up with you after your visit, we do sometimes ask that you provide information to us.
+        </p>
+        <p><b>For example, we may ask for information when you:</b></p>
+        <p>
+            <ul>
+                <li>Provide feedback in an online survey</li>
+                <li>Vote in our ongoing favourite destination survey,or</li>
+                <li>Participate in a contest</li>
+                <li>Commenr on a Travel Advisor</li>
+            </ul>
+        </p>
+        <p>
+            with regard to your survey responses, while your individual response will not be relesed unless specifically notes, final compiles survey results may be relesed to third parties. personal and technical information (such as IP addresses and cookie numbers) may also be collected by third parties whoes sites we link to. 
+        </p>
+		<button class="btn">Read More</button>
+		</div>
+    </div>
 </body>
 </html>
