--- a/home/about us/privacy policy/privacy policy.html
+++ b/home/about us/privacy policy/privacy policy.html
@@ -9,10 +9,10 @@
 		<div class="main">
 		<h1>Privacy Policy</h1>
 		<p>
-            TravelSense is concerned about the privacy of the information that you provide during your visits toour website. To provide you with certain services, enhance your visit to our website, or to allow us to follow up with you after your visit, we do sometimes ask that you provide information to us.
+            TravelSense is concerned about the privacy of the information that you provide during your visits to our website. To provide you with certain services, enhance your visit to our website, or to allow us to follow up with you after your visit, we do sometimes ask that you provide information to us.
         </p>
         <p><b>For example, we may ask for information when you:</b></p>
-        <p>
+        <p align to="left">
             <ul>
                 <li>Provide feedback in an online survey</li>
                 <li>Vote in our ongoing favourite destination survey,or</li>
@@ -21,9 +21,11 @@
             </ul>
         </p>
         <p>
-            with regard to your survey responses, while your individual response will not be relesed unless specifically notes, final compiles survey results may be relesed to third parties. personal and technical information (such as IP addresses and cookie numbers) may also be collected by third parties whoes sites we link to. 
+            With regard to your survey responses, while your individual response will not be released unless specifically noted, final complied survey results may be released to third parties. Personal and technical information(such as IP addresses and cookie numbers) may also be collected by third parties whose sites we link to.
         </p>
-		<button class="btn">Read More</button>
+        <p>
+            Any personal information provided to TravelSense in an email message will only be used to resolve the matter identified in the email. TravelSense has no intent or desire to infringe upon your right to privacy while using this Website. TravelSense reserves the right to change its Privacy Policy. A revised Privacy Policy will become effective at the time it is posted on TravelSense.org.
+        </p>
 		</div>
     </div>
 </body>
