--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -23,37 +23,47 @@
                             <div class="register-form">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Full Name">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Username">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Email">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="date" class="form-control" placeholder="Date of birth">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Address">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="NIC">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="tel" class="form-control" placeholder="Contact Number">
-
                                 </div>
+
                                 <div class="form-group">
                                     <input type="password" class="form-control" placeholder="Password">
-
                                 </div>
+
+                                 <div class="form-group">
+                                    <input type="password" class="form-control" placeholder="Password">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="password" class="form-control" placeholder="Retype Password" name="password_2">
+                                </div>
+
                                 <button type="button" class="btn btn-primary">Signup</button>
+                                
+                                Already signup? <a href="login.html"> Login</a>
 
                             </div>
 
