miner changers on avishka's sign in page

--- a/Agent signup form/login.html
+++ b/Agent signup form/login.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Agent login page</title>
         <link rel="stylesheet" href="signup.css">
@@ -10,10 +11,12 @@
                 <div class="col-md-10 offset=md-1">
                     <div class="row">
                         <div class="col-md-5 register-left">
-                            <img src="16-166376_drop-down-arrow-dropdown-arrow-icon-png.png">
+                            <img src="images/a.png">
                             <h3>Join Us</h3>
                             <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
-                            <button type="button" class="btn btn-primary">About Us</button>
+                            <a href="about.html">
+                                <button type="button" class="btn btn-primary">About Us</button>
+                            </a>
                         </div>
 
                         <div class="col-md-7 register-right">
@@ -27,7 +30,7 @@
                                     <input type="password" class="form-control" placeholder="Password" name="password_1">
                                 </div>
                               
-                                    <button type="button" class="btn btn-primary">Signup</button>
+                                    </a><button type="button" class="btn btn-primary">Login</button>
                                     Do you have an account?<a href="signup.html"> Sign up</a>
 
                             </div>
