--- a/Agent signup form/signup.html
+++ b/Agent signup form/signup.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Agent signup page</title>
         <link rel="stylesheet" href="signup.css">
@@ -10,10 +11,12 @@
                 <div class="col-md-10 offset=md-1">
                     <div class="row">
                         <div class="col-md-5 register-left">
-                            <img src="16-166376_drop-down-arrow-dropdown-arrow-icon-png.png">
+                            <img src="images/a.png">
                             <h3>Join Us</h3>
                             <p>Travel is fun. It is a fantastic adventure. More than that, however, travel can enrich your life in numerous ways.</p>
-                            <button type="button" class="btn btn-primary">About Us</button>
+                            <a href="about.html">
+                                <button type="button" class="btn btn-primary">About Us</button>
+                            </a>
 
 
                         </div>
