--- a/Contact us/index.html
+++ b/Contact us/index.html
@@ -19,9 +19,9 @@
 
                   <!-- First grid -->
                <div>
-                 <i class="fa fa-map-marker"></i><span class="form-info">  192 City Boston Amercia #345</span><br>
-                 <i class="fa fa-phone" > </i><span class="form-info">  +92 00034567890</span><br>
-                 <i class="fa fa-envelope"></i><span class="form-info">  JhonDoe12@Gmail.com</span>
+                 <i class="fa fa-map-marker"></i><span class="form-info"> NSBM Green University</span><br>
+                 <i class="fa fa-phone" > </i><span class="form-info">  0111111111</span><br>
+                 <i class="fa fa-envelope"></i><span class="form-info">  nchandrawansha@Gmail.com</span>
                </div>
                
                    <!-- second grid -->
