--- a/Nav bar/index.html
+++ b/Nav bar/index.html
@@ -17,5 +17,6 @@
                 <li><a href="#">About us</a></li>
             </ul>
         </nav>
+        <a class="cta" href="#"><button>Contact</button></a>
     </header>
 </body>
