--- a/home/Explore/ancient cities/Anuradhapura/anuradhapura.html
+++ b/home/Explore/ancient cities/Anuradhapura/anuradhapura.html
@@ -17,8 +17,8 @@
     <!--1st Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-      <img class="pic" src="images/a.jpg">
-      
+      <img class="pic" src="a.jpg">
+   	<div class="text">Wallarts</div>
     </div>
 
 	<!--2nd Slide Div---------------------------------------------------------->
