--- a/home/Explore/ancient cities/Anuradhapura/anuradhapura.html
+++ b/home/Explore/ancient cities/Anuradhapura/anuradhapura.html
@@ -33,7 +33,7 @@
       <div class="numbertext">2 / 5</div>
       <img class="pic" src="images/c.jpg">
       
-    </div
+    </div>
 
     <!--4th Slide Div---------------------------------------------------------->
     <div class="mySlides fade">
