--- a/home/Explore/Catgry/Anciant Cites/Anuradhapur/template.html
+++ b/home/Explore/Catgry/Anciant Cites/Anuradhapur/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="template.css">
+	<link rel="stylesheet" type="text/css" href="file:///C:/xampp/htdocs/CA-web-development-project/new%20templet/template.css">
 	<title></title>
 </head>
 <body>
