--- a/home/Explore/Catgry/Anciant Cites/table.html
+++ b/home/Explore/Catgry/Anciant Cites/table.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>table</title>
-	<link rel="stylesheet" type="text/css" href="table.css">
+	<link rel="stylesheet" type="text/css" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/css/table.css">
 </head>
 <body>
 	<h1 class="name">Category Name</h1>
