--- a/home/about us/about/about.html
+++ b/home/about us/about/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>About Us</title>
-	<link rel="stylesheet" href="about.css/style.css">
+	<link rel="stylesheet" href="about/style.css">
 </head>
 <body>
 	<div class="header">
