--- a/home/Explore/Catgry/Anciant Cites - hela/Anuradhapur/template.html
+++ b/home/Explore/Catgry/Anciant Cites - hela/Anuradhapur/template.html
@@ -8,7 +8,7 @@
 	 <div class="divvv">
   <div class="placename">
    
-	   <h1 class="h1name">Mirissa</h1>
+	   <h1 class="h1name">Anuradhapura</h1>
   </div>   
 <!--Slide Show Container Div----------------------------------------------------->
   <br> 
