Update plan your trip.html

--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -3,7 +3,9 @@
 <title></title>
 </head>
 <body>
-    <div class="regform"><h1>Registartion form</h1></div>
+    <div class="regform"><h1>Plan Your Trip</h1></div>
+    <p><b>Get Travel Assisttance from Several ASTA Travel Advisors</b></p>
+    
     <div class="mane">
         <form>
             <div id="name">
@@ -21,10 +23,20 @@
             <input class="email" type="text" name="email">
 
             <h2 class="name">Phone</h2>
-            <input class="code"type="text" name="area_code">
+            <input class="code" type="text" name="area_code">
             <label class="area-code">Area Code</label>
             <input class="number" type="text" name="phone">
             <lablel class="phone-number">Phone number</lablel>
+
+            <h2 class="name">Subject</h2>
+            <select class="option" name="subject">
+            <option disabled="disabled" selected="selected">--Choose Option</option>
+            <option>Subject 1</option>
+            <option>Subject 2</option>
+            <option>Subject 3</option>
+            </select>
+
+            <h2>Are you beginner</h2>
         </form>
     </div>
 </body>
