--- a/home/index/index.html
+++ b/home/index/index.html
@@ -134,7 +134,38 @@
             </div>
         </div>
     </div>
+    <!--slide shaw-
 
+    	<div class="slideshow-container" style="background: red;">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="a.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="b.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="c.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="d.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div->
+
+   <!-footer --->
     <footer class="footer">
         <div class="container">
             <div class="row">             
