--- a/home/index/index.html
+++ b/home/index/index.html
@@ -134,36 +134,50 @@
             </div>
         </div>
     </div>
-    <!--slide shaw-
+    <!--slide shaw-->
 
-    	<div class="slideshow-container" style="background: red;">
+    	<div class="slideshow-container">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="a.jpg" style="width:100%">
+  <img src="imagez/a.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="b.jpg" style="width:100%">
+  <img src="imagez/b.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="c.jpg" style="width:100%">
+  <img src="imagez/c.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="d.jpg" style="width:100%">
+  <img src="imagez/d.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
-</div->
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
+
 
    <!-footer --->
     <footer class="footer">
@@ -212,6 +226,35 @@
   <script src="includes/node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="includes/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="includes/style/app.js"></script>
+
+  <script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
 </body>
 
 </html>
