--- a/home/index/index.html
+++ b/home/index/index.html
@@ -135,48 +135,45 @@
         </div>
     </div>
     <!--slide shaw-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="imagez/a.jpg" alt="First slide">
+    <div class="carousel-caption d-none d-md-block">
+    <h5>kjdsjdsj</h5>
+    <p>okdl;skd;lsk</p>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide">
+   <div class="carousel-caption d-none d-md-block">
+    <h5>okoioskd</h5>
+    <p>..=fd;djdjfjd</p>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide">
+     <div class="carousel-caption d-none d-md-block">
+    <h5>kjdsjdsj</h5>
+    <p>okdl;skd;lsk</p>
+  </div>   
+    </div>
+  </div>
 
-    	<div class="slideshow-container">
-
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="imagez/a.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="imagez/b.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="imagez/c.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
-
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="imagez/d.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
-
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-</div>
-
 
 
    <!-footer --->
@@ -227,34 +224,8 @@
   <script src="includes/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="includes/style/app.js"></script>
 
-  <script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-}
-</script>
+  
 </body>
 
 </html>
+
