--- a/home/index/index.html
+++ b/home/index/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <a href="User.html"><button>user</button></a>
     <nav class="navbar navbar-dark navbar-expand-sm bg-success fixed-top">
         <div class="container">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navbar">
