Update plan your trip.html

--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -91,7 +91,108 @@
         color: #555;
 
     }
+    .email{
+        position: relative;
+        left: 200px;
+            top:-37px;
+            line-height: 20px;
+            width:480px;
+            border-radius:6px;
+            padding:0 22px;
+            font-size:16px;
+            color: #555;
+    }
+    .code{
+        position: relative;
+        left: 200px;
+        top:-37px;
+        line-height: 40px;
+        width: 95px;
+        border-radius: 6px;
+        padding: 0 22px;
+        font-size:16px;
+        color: 555;
+    }
+    .number{
+        position: relative;
+        left: 200px;
+        top:-37px;
+        line-height: 40px;
+        width: 255px;
+        border-radius: 6px;
+        padding: 0 22px;
+        font-size:16px;
+        color: 555;
+    }
+    .area-code{
+        position: relative;
+        color:#E5E5E5;
+        text-transform:capitalize;
+        font-size:16px;
+        left: 54px;
+        top:-4px;
+    }
+    .phone-number{
+        position: relative;
+        color:#E5E5E5;
+        text-transform:capitalize;
+        font-size:16px;
+        left: -100px;
+        top: -2px;
+    }
+    .option{
+        position: relative;
+        left: -37px;
+        line-height: 40px;
+        width:532px;
+        height: 40px;
+        border-radius: 6px;
+        padding: 0 22px;
+        font-size: 16px;
+        color: #555;
+        outline: none;
+        overflow: hidden;
+    }
+    .option option{
+        font-size: 20px;
+    }
+    #costomer{
+        margin-left: 25px;
+        color: white;
+        font-size:18px;
+    }
+    .radio{
+        display: inline-block;
+        padding-right: 70px;
+        font-size: 25px;
+        margin-left: 25px;
+        margin-top: 15px;
+        color: white;  
+    }
+    .radio input{
+        width:20px;
+        height:20px;
+        border-radius: 50%;
+        cursor:pointer;
+        outline: none;
 
+    }
+    .button{
+        background-color: #3BAF9F;
+        display: block;
+        margin: 20px 0px 0px 20px;
+        text-align:center;
+        border-radius: 12px;
+        border: 2px solid #366473;
+        padding:14px 110px;
+        outline: none;
+        color: white;
+        cursor: pointer;
+        transition: 0.25px;
+    }
+    button:hover{
+        background-color:#5390F5;
+    }
 </style>
 </head>
 <body>
@@ -112,10 +213,10 @@
              <label class="lastlable">Last Name</label>
             </div>
 
-            <h2 class="name">Company</h2>
+            <h2 class="name">Which Places do yo wish to travel?</h2>
             <input class="company" type="text" name="company">
 
-            <h2 class="name">Email</h2>
+            <h2 class="name">which hotel do you select?</h2>
             <input class="email" type="text" name="email">
 
             <h2 class="name">Phone</h2>
