--- a/home/index/User.html
+++ b/home/index/User.html
@@ -72,7 +72,7 @@
 
         <!--Start Table-->
         <div class="container-fluid mt-n10">
-            <div class="card mb-4">
+            <div class="card mb-4 sm-4">
                 <div class="card-header">Edit User</div>
                 <div class="card-body">
                     <form>
