Update plan your trip.html

--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -197,20 +197,20 @@
 </head>
 <body>
     <div class="regform"><h1>Plan Your Trip</h1></div>
+
     <p><b>Get Travel Assisttance from Several ASTA Travel Advisors</b></p>
     <p>maybe you need help with vaction planning,honeymmon travel, tour packages, europe trips quotes?whatever your need, we can help! not sure which travel adviisor.no worries</p>
+
     <p>Recevie multiple replies for from ASTA(American Society of Travel Advisor)travel advissors. you are in control. select how many advisors yu want to get replies form and long you want your request to be active. seriours request only, please.</p>
 
 
     <p><b>All fields are required</b></p>
     <div class="mane">
         <form>
-            <div id="name">
-             <h2 class="name">Name</h2>
-             <input class="firstname" type="rext" name="first_name"></input><br>
-             <label class="firstlable">First Name</label>
-             <input class="lastname" type="text" name="last_name">
-             <label class="lastlable">Last Name</label>
+            <div id="places">
+             <h2 class="name">which palace do you wish to visit?</h2>
+             <input class="palace" type="text" name="Places"></input><br>
+             <label class="palace">First Name</label>
             </div>
 
             <h2 class="name">Which Places do yo wish to travel?</h2>
@@ -225,12 +225,39 @@
             <input class="number" type="text" name="phone">
             <lablel class="phone-number">Phone number</lablel>
 
-            <h2 class="name">Subject</h2>
+            <h2 class="date">Days of your trip?</h2>
             <select class="option" name="subject">
             <option disabled="disabled" selected="selected">--Choose Option</option>
-            <option>Subject 1</option>
-            <option>Subject 2</option>
-            <option>Subject 3</option>
+            <option> 1</option>
+            <option> 2</option>
+            <option> 3</option>
+            <option> 4</option>
+            <option> 5</option>
+            <option> 6</option>
+            <option> 7</option>
+            <option> 8</option>
+            <option> 9</option>
+            <option> 10</option>
+            <option> 11</option>
+            <option> 12</option>
+            <option> 13</option>
+            <option> 14</option>
+            <option> 15</option>
+            <option> 16</option>
+            <option> 17</option>
+            <option> 18</option>
+            <option> 19</option>
+            <option> 20</option>
+            <option> 21</option>
+            <option> 22</option>
+            <option> 23</option>
+            <option> 24</option>
+            <option> 25</option>
+            <option> 26</option>
+            <option> 27</option>
+            <option> 28</option>
+            <option> 29</option>
+            <option> 30</option>
             </select>
 
             <h2>Are you beginner</h2>
