--- a/home/index/User.html
+++ b/home/index/User.html
@@ -87,8 +87,8 @@
                         <div class="form-group">
                             <label for="user-role">Role:</label>
                             <select class="form-control" id="user-role">
-                                <option>Admin</option>
-                                <option>Subscriber</option>
+                                <option>Traveller</option>
+                                <option>Travel agent</option>
                             </select>
                             <div class="form-group">
                             <label for="post-title">Choose photo:</label>
