--- a/home/index/index.html
+++ b/home/index/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <a href="User.html"><button>user</button></a>
+
     <nav class="navbar navbar-dark navbar-expand-sm bg-success fixed-top">
         <div class="container">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navbar">
@@ -62,6 +62,12 @@
 
         </div>
     </nav>
+
+    <div id="layoutSidenav_content"></div>
+        <nav class="navbar navbar-dark navbar-expand-sm bg-primary">
+            <a href="User.html"><button>user</button></a>
+        </nav>
+    </div>
 
 <!-- parelllex effect -->
     
@@ -144,21 +150,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="imagez/a.jpg" alt="First slide">
+      <img class="d-block w-100" src="imagez/a.jpg" alt="First slide" style="width:100em; height:40em;">
     <div class="carousel-caption d-none d-md-block">
     <h5>kjdsjdsj</h5>
     <p>okdl;skd;lsk</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide">
+      <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide" style="width:100em; height:45em;">
    <div class="carousel-caption d-none d-md-block">
     <h5>okoioskd</h5>
     <p>..=fd;djdjfjd</p>
   </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide">
+      <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide"  style="width:100em; height:40em;">
      <div class="carousel-caption d-none d-md-block">
     <h5>kjdsjdsj</h5>
     <p>okdl;skd;lsk</p>
