--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -204,19 +204,21 @@
     <p>Recevie multiple replies for from ASTA(American Society of Travel Advisor)travel advissors. you are in control. select how many advisors yu want to get replies form and long you want your request to be active. seriours request only, please.</p>
 
 
-    <p><b>All fields are required</b></p>
+    <p><b>All fields are required</b></p><br>
     <div class="mane">
         <form>
-            <div id="places">
-             <h2 class="name">which palace do you wish to visit?</h2>
-             <input class="palace" type="text" name="Places"></input><br>
-             <label class="palace">First Name</label>
+            <div id="name">
+             <h2 class="name">NAME</h2>
+             <input class="firstname" type="rext" name="first_name">
+             <label class="firstlabel">firstname</label>
+             <input class="lastname" type="text" name="last_name">
+             <label class="lastlabel">last name</label>
             </div>
 
-            <h2 class="name">Which Places do yo wish to travel?</h2>
+            <h2 class="name">Company</h2>
             <input class="company" type="text" name="company">
 
-            <h2 class="name">which hotel do you select?</h2>
+            <h2 class="name">Email</h2>
             <input class="email" type="text" name="email">
 
             <h2 class="name">Phone</h2>
