--- a/home/index/index.html
+++ b/home/index/index.html
@@ -181,7 +181,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
+<iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
 
    <!-footer --->
     <footer class="footer">
