--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title></title>
-<style type="text/css">
+<!--style type="text/css">
     *{
         margin: 0;
         padding: 0;
@@ -193,7 +193,8 @@
     button:hover{
         background-color:#5390F5;
     }
-</style>
+</style-->
+
 </head>
 <body>
     <div class="regform"><h1>Plan Your Trip</h1></div>
@@ -205,25 +206,8 @@
 
 
     <p><b>All fields are required</b></p>
-    <div class="mane">
+    <div class="main">
         <form>
-            <div id="places">
-             <h2 class="name">which palace do you wish to visit?</h2>
-             <input class="palace" type="text" name="Places"></input><br>
-             <label class="palace">First Name</label>
-            </div>
-
-            <h2 class="name">Which Places do yo wish to travel?</h2>
-            <input class="company" type="text" name="company">
-
-            <h2 class="name">which hotel do you select?</h2>
-            <input class="email" type="text" name="email">
-
-            <h2 class="name">Phone</h2>
-            <input class="code" type="text" name="area_code">
-            <label class="area-code">Area Code</label>
-            <input class="number" type="text" name="phone">
-            <lablel class="phone-number">Phone number</lablel>
 
             <h2 class="date">Days of your trip?</h2>
             <select class="option" name="subject">
@@ -259,20 +243,23 @@
             <option> 29</option>
             <option> 30</option>
             </select>
+            <h2 class="name">Which Places do yo wish to travel?</h2>
+            <input class="company" type="text" name="company">
 
-            <h2>Are you beginner</h2>
-            <label class="radio">
-               <input class="radio-one" type="radio" checked="checked" name=""> 
-               <span class="checkmark"></span>
-               yes
-            </label>
-            <label class="radio">
-               <input class="radio-two" type="radio" checked="checked" name=""> 
-               <span class="checkmark"></span>
-               no
-            </label>
+            <h2 class="name">which hotel do you select?</h2>
+            <input class="email" type="text" name="email">
 
-            <button type="submit">Register</button>
+            <h2>  Do you want a travel agent?</h2>
+            <button> Yes I want</button>
+            <button> No, I wouldn't </button>
+            <br>    
+            <ul>    
+                <li>You can chat with them free</li>
+                <li>Discuss about your destination</li>
+            </ul>
+
+            <button type="submit">Save my plan</button>
+            <button type="reset"> Clear all</button>
         </form>
     </div>
 </body>
