Update plan your trip.html

--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -208,9 +208,9 @@
     <div class="mane">
         <form>
             <div id="name">
-             <h2 class="name">NAME</h2>
+             <h2 class="name">Name</h2>
              <input class="firstname" type="rext" name="first_name">
-             <label class="firstlabel">firstname</label>
+             <label class="firstlabel">first name</label>
              <input class="lastname" type="text" name="last_name">
              <label class="lastlabel">last name</label>
             </div>
@@ -222,7 +222,7 @@
             <input class="email" type="text" name="email">
 
             <h2 class="name">Phone</h2>
-            <input class="code" type="text" name="area_code">
+            <input class="code" type="text" name="phone">
             <label class="area-code">Area Code</label>
             <input class="number" type="text" name="phone">
             <lablel class="phone-number">Phone number</lablel>
