--- a/home/index/index.html
+++ b/home/index/index.html
@@ -49,8 +49,8 @@
                           <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/about%20us/privacy.html">Privacy Policy</a>
                         </div>
                       </li>
-                    <li class="nav-item active"><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/sign%20in/signin.html" class="nav-link">Login</a></li>
-                    <li class="nav-item"><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/signup(hela)/text.html" class="nav-link">Signup</a></li>
+                    <li class="nav-item active"><a href="register/login.php" class="nav-link">Login</a></li>
+                    <li class="nav-item"><a href="register/register.php" class="nav-link">Signup</a></li>
                     
                 </ul>
                  <!--Sarchbar-->
@@ -185,7 +185,7 @@
 <center>
 <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
 </center>
-   <!-footer --->
+   <!--footer --->
     <footer class="footer">
         <div class="container">
             <div class="row">             
