--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -17,6 +17,13 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero hic tempore repellendus. Amet reprehenderit est libero eos rem, porro recusandae nostrum nisi. Aut deleniti repellat reiciendis corrupti ipsam placeat velit.
                 </p>
             </div>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-text">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
         
 
