--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -20,7 +20,12 @@
             <div class="cards">
                 <div class="card">
                     <div class="card-text">
-                        
+                        <h3>John Deon</h3>
+                        <span>Yoga trainer</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto at reiciendis assumenda ratione, eveniet iure amet aspernatur praesentium autem ad beatae ipsa tempore provident consectetur illum dolorum debitis hic dolores!
+                            
+                        </p>
+
                     </div>
                 </div>
             </div>
