--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -22,8 +22,8 @@
                     <div class="card-text">
                         <h3>John Deon</h3>
                         <span>Yoga trainer</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto at reiciendis assumenda ratione, eveniet iure amet aspernatur praesentium autem ad beatae ipsa tempore provident consectetur illum dolorum debitis hic dolores!
-                            
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
                         </p>
 
                     </div>
