--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -27,18 +27,18 @@
                         </p>
 
                     </div>
-                    <img src="unnamed.png">
+                    <img src="1.png">
                 </div>
                 <div class="card">
                     <div class="card-text">
-                        <h3>John Deon</h3>
+                        <h3>Lara Craft</h3>
                         <span>Yoga trainer</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
 
                         </p>
 
                     </div>
-                    <img src="unnamed.png">
+                    <img src="2.png">
                 </div>
                 
             </div>
