--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -130,11 +130,12 @@
 <!--section 2-->
 
 <div  class="flex-container">
+	<a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/golf/table.html">
     <div class="card">
-        <div class="card-image1"></div>
+        <div class="card-image6"></div>
         <div class="card-text">
             <span class="date"></span>
-            <h2>Beach</h2>
+            <h2>Golf</h2>
             <p>Sri Lanka, officially the Democratic Socialist Republic of Sri Lanka, is an island country in South Asia, located in the Indian Ocean southwest of the Bay of Bengal and southeast of the Arabian Sea</p>
         </div>
         <div class="card-stats">
@@ -152,7 +153,8 @@
             </div>
         </div>
     </div>
-    
+   </a>
+   
     <div class="card">
         <div class="card-image2"></div>
         <div class="card-text">
